fixed jumpiness on pages using cd-hmedia-scroller

--- a/src/renderer/style.less
+++ b/src/renderer/style.less
@@ -2254,6 +2254,8 @@ input[type="range"].web-slider.display--small::-webkit-slider-thumb {
   flex-flow: row;
   overflow-x: scroll;
   overflow-y: hidden;
+  height: 284px;
+  align-items: center;
 
   &::-webkit-scrollbar-thumb {
     box-shadow: none;
